# llm-portfolio

./: .gitignore  README.md  cv.tex  cv_data_analyst.tex  requirements.txt
01-financial-sentiment-distillation/: README.md  baseline_results.json  kd_results.json  pruning_results.json  requirements.txt
02-enterprise-nl2sql/: README.md  requirements.txt
03-bank-customer-risk-engine/: README.md  requirements.txt
04-data-analyst-agent/: README.md  requirements.txt
05-medical-rag-assistant/: README.md  requirements.txt
06-llm-evaluation-langsmith/: README.md  requirements.txt
07-lora-qlora-finetuning/: README.md  requirements.txt
08-diffusion-lora-product-images/: README.md  (+1 more)
09-product-image-segmentation/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
09-product-image-segmentation/.github/workflows/: ci.yml
09-product-image-segmentation/api/: main.py  schemas.py
09-product-image-segmentation/configs/: default.yaml  models.yaml
09-product-image-segmentation/scripts/: download_weights.sh  evaluate.py  run_inference.py
09-product-image-segmentation/src/evaluation/: metrics.py
09-product-image-segmentation/src/inference/: pipeline.py
09-product-image-segmentation/src/models/: base.py  birefnet.py  modnet.py  sam_wrapper.py  u2net.py
09-product-image-segmentation/src/postprocess/: mask_refine.py
09-product-image-segmentation/src/preprocess/: image_ops.py
09-product-image-segmentation/src/utils/: visualize.py
09-product-image-segmentation/tests/: test_api.py  test_metrics.py  test_pipeline.py
(+32 files in other folders)
