[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-image-segmentation"
version = "0.1.0"
description = "Product image background removal and matting pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Adebanji Adelowo"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
